--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Moviefans</title>
+</head>
+<body>
+    <div id="Title">
+        <h1>Title</h1>
+    </div>
+
+    
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="google-site-verification" content="UpUZIQ53EXHbY44I18lD-YcXYYoFaQka3g_EJhS_lf0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sherlock</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
@@ -24,4 +41,4 @@
 
     
 </body>
-</html>
+</html> -->
